# safe-oxidizer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  example.py  pyproject.toml  test_script.sh
.github/workflows/: release.yml
docs/: api.md
scripts/: eval_tokenizer_accuracy.py
src/: brics.rs  encode.rs  fragment.rs  lib.rs  mol.rs  smiles_parser.rs  smiles_writer.rs  tokenizer.rs
tests/: aromatic_tests.rs  equivalence_tests.rs  test_safe_oxidizer.py  test_tokenizer.py
