[package]
name = "safe-oxidizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "safe_oxidizer"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
rayon = "1.10"
regex = "1"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
numpy = "0.24"
rand = "0.8"
